# deploybot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
agent/: agent.py  prompts.py
backend/: app.py
data/: scraper.py
db/: conversations.py  db.py
eval/: benchmark_cache.py  benchmark_models.py  benchmark_semantic_cache.py  queries.py  security_tests.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.test.jsx
frontend/src/components/: ChatWindow.css  ChatWindow.jsx  ChatWindow.test.jsx  Checklist.css  Checklist.jsx  InputBar.css  InputBar.jsx  InputBar.test.jsx  LandingPage.css  LandingPage.jsx  Message.css  Message.jsx  Message.test.jsx  Sidebar.css  Sidebar.jsx  Sidebar.test.jsx  StrategySelector.css  StrategySelector.jsx  StrategySelector.test.jsx
rag/: embed.py  retriever.py  semantic_cache.py
tools/: cve_tool.py  db_tool.py  web_search.py
